# Desafio-tecnico-Lacrei-Saude-Backend-2

./: .env  .env.example  Diretrizes.md  Dockerfile  README.md  docker-compose.yml  flake.nix  pyproject.toml
.github/workflows/: main.yml
consultas/: models.py  serializers.py  tests.py  views.py
consultas/services/: asaas.py
core/: settings.py  urls.py
profissionais/: models.py  serializers.py  tests.py  urls.py  views.py
